
Change Log Update (00.00.90)
* 2017-05-03
+ Added new model files for File Areas, Message Areas, Network Addresses
  and BBS Listing.
- Create Dao objects for reading/writing the database for the new models.

Change Log Update (00.00.89)
* 2017-05-03
+ More work on the FormManager and System Configuration Form along with 
  Implementation.  Still working on the best way to implement so playing
  with different ideas right now.
+ Create Conference Model, and DAO for database read/writes.
- Will be adding Message and File Area models and DAO's next.

Change Log Update (00.00.88)
* 2017-05-02
+ Updates to Process, Added Separate UpdateState for Process Handling
  If were inside a process, skip ESC sequence testing, just pass through
  all data as is to the process.
+ Cleanup processes on next look, make sure if a process is not running to 
  pop it off the stack for cleanup.

Change Log Update (00.00.87)
* 2017-05-02
+ External Processes (Windows / Posix)
  Created Classes and methods for executing external processes, doors, scripts
  Tried Boost Process but didn't work as needed and ASIO calls were not working
  implemented initial platform specific processes execution.
- Need to implement screen buffer save / restore on return from external process
- Add Flags to clear the screen on external processes execution
- Add checks if user hangs up, process will also be terminated (testing needed)
- Look at implementing either Python or V8 Java Script engine for scripting.

Change Log Update (00.00.86)
* 2017-04-29
+ Windows Project Updates
  - Updated Boost from 55 to latest 64, compiled with ICU and Boost Python now.
  - Cleaned up all Project Files, removed unused libs and include folders.
  - Cleared new Boost Warning in Config.hpp model for Boost UUID generation.
+ Resynced Linux Projects
- Researching Door/Script Server Now for externals.

Change Log Update (00.00.85)
* 2017-04-17
+ Completed Initial work on SessionStats objects and Database DAO calls.