@@ -4,8 +4,8 @@
     <![CDATA[]]>
   </Environment>
   <Project Name="sqlitewrapped" Path="../sqlitewrap/sqlitewrapped-lnx.project" Active="No"/>
-  <Project Name="xrm-server" Path="xrm-server-lnx.project" Active="Yes"/>
-  <Project Name="xrm-unittest" Path="../xrm-unittest/xrm-unittest-lnx.project" Active="No"/>
+  <Project Name="xrm-server" Path="xrm-server-lnx.project" Active="No"/>
+  <Project Name="xrm-unittest" Path="../xrm-unittest/xrm-unittest-lnx.project" Active="Yes"/>
   <Project Name="xrm-menu-convert-lnx" Path="../xrm-menu-convert/xrm-menu-convert-lnx.project" Active="No"/>
   <Project Name="xrm-menu-convert-prompt-lnx" Path="../xrm-menu-prompt-convert/xrm-menu-convert-prompt-lnx.project" Active="No"/>
   <BuildMatrix>
