@@ -78,6 +78,14 @@
       <File Name="../src/data-sys/session_stats_dao.hpp"/>
       <File Name="../src/data-sys/conference_dao.cpp"/>
       <File Name="../src/data-sys/conference_dao.hpp"/>
+      <File Name="../src/data-sys/file_area_dao.cpp"/>
+      <File Name="../src/data-sys/file_area_dao.hpp"/>
+      <File Name="../src/data-sys/grouping_dao.cpp"/>
+      <File Name="../src/data-sys/grouping_dao.hpp"/>
+      <File Name="../src/data-sys/message_area_dao.cpp"/>
+      <File Name="../src/data-sys/message_area_dao.hpp"/>
+      <File Name="../src/data-sys/network_dao.cpp"/>
+      <File Name="../src/data-sys/network_dao.hpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="model-sys">
       <File Name="../src/model-sys/config.hpp"/>
@@ -93,6 +101,7 @@
       <File Name="../src/model-sys/file_area.hpp"/>
       <File Name="../src/model-sys/message_area.hpp"/>
       <File Name="../src/model-sys/network.hpp"/>
+      <File Name="../src/model-sys/grouping.hpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="mods">
       <File Name="../src/mods/mod_base.hpp"/>
@@ -115,6 +124,8 @@
     <VirtualDirectory Name="data-app">
       <File Name="../src/data-app/last_callers_dao.cpp"/>
       <File Name="../src/data-app/last_callers_dao.hpp"/>
+      <File Name="../src/data-app/bbs_list_dao.cpp"/>
+      <File Name="../src/data-app/bbs_list_dao.hpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="model-app">
       <File Name="../src/model-app/last_callers.hpp"/>
